jupyter-notebook/jupyter-deploy.yml
---
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  labels:
    k8s-app: jupyter-notebook
  name: jupyter-notebook
  namespace: jupyter-ns
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: jupyter-notebook
  template:
    metadata:
      labels:
        k8s-app: jupyter-notebook
    spec:
      containers:
      - name: jupyter-notebook
        image: jupyter/base-notebook
        command: ["start-notebook.sh"]
        args: ["--port=8558", "--no-browser", "--ip='*'"]
        ports:
        - containerPort: 8558
          protocol: TCP
          name: http
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 8558
          initialDelaySeconds: 30
          timeoutSeconds: 30
        volumeMounts:
        - mountPath : /home/jovyan/work/
          name: jupyter-data
      volumes:
      - name: jupyter-data
        persistentVolumeClaim:
          claimName: jupyter-pvc
